--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,9 @@ body{
 }
 
 #mobile-nav{
-    
+    position: fixed;
+    padding:25px 20px 8px 20px;
+
     background:#2C2924;
     border-bottom: 10px #F9B042 solid;
     /*
@@ -28,6 +30,7 @@ body{
 
 .menu-icon:hover::after {
     background: #F9B042;
+
     /*
     
     Currently the box-shadow doesn't display properly. Disabled until fixed.
@@ -41,11 +44,15 @@ body{
     padding:0;
 }
 
+#first-box{
+    padding-top:70px;
+}
 .nav-box-odd{
     background: #8CC63E;
 }
 .nav-box-odd a{
     text-decoration: unset;
+    text-shadow: 0 1px 5px #2c2924;
     color:#2c2924;
     font-size: 5em;
     font-family: 'Montserrat', sans-serif
@@ -56,6 +63,7 @@ body{
 }
 
 .nav-box-even a{
+    text-shadow: 0 1px 5px #2c2924;
     text-decoration: unset;
     color:#2c2924;
     font-size: 5em;
@@ -85,4 +93,12 @@ footer{
 #footer-social-list li{
     padding:10px;
     display:inline;
+}
+
+#topbar-center-logo{
+    position:fixed;
+    display:flex;
+    top:80px;
+    width:100%;
+    transition: display 2s linear 1s;
 }
