--- a/css/app.css
+++ b/css/app.css
@@ -46,19 +46,28 @@ body{
 
 #first-box{
     padding-top:70px;
+    padding-left:0;
+    padding-right:0;
+    padding-bottom:0;
 }
 
 .nav-box-odd{
+    padding:0;
     background: #8CC63E;
     overflow: hidden;
 }
 
 .nav-box-even{
+    padding:0;
     background: #F9B042;
     overflow: hidden;
 }
 
 .nav-box-odd a {
+    width:100%;
+    height:100%;
+    display:block;
+    overflow:auto;
     text-decoration: unset;
     text-shadow: 0 1px 5px #2c2924;
     color:#2c2924;
@@ -76,6 +85,12 @@ body{
 }
 
 .nav-box-even a{
+    width:100%;
+    height:100%;
+    width:100%;
+    height:100%;
+    display:block;
+    overflow:auto;
     text-shadow: 0 1px 5px #2c2924;
     text-decoration: unset;
     color:#2c2924;
