Fixed background color

--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ font-family: 'Open Sans', sans-serif; italics - subtext
 
 
 body{
-    background: #707070;
+    background: #2C2924;
     font-family: 'Open Sans', sans-serif;
 }
 
