--- a/css/app.css
+++ b/css/app.css
@@ -43,7 +43,11 @@ body{
 .grid-container{
     padding:0;
 }
-
+#map{
+    width:100%;
+    height:400px;
+    padding-top:8%;
+}
 .tabes{
     max-width:100%;
 }
