--- a/css/app.css
+++ b/css/app.css
@@ -171,4 +171,9 @@ footer{
     height:0;
     width:0;
 }
+
+#address{
+    font-size:unset;
+}
+
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
