--- a/css/app.css
+++ b/css/app.css
@@ -176,5 +176,8 @@ footer{
     font-size:unset;
 }
 
+.subhead{
+    font-size:0.5em;
+}
 
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
