--- a/css/app.css
+++ b/css/app.css
@@ -12,6 +12,10 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
+.cell{
+    padding:0;
+}
+
 #mobile-nav{
     position: fixed;
     padding:25px 20px 8px 20px;
@@ -43,10 +47,10 @@ body{
 .grid-container{
     padding:0;
 }
+
 #map{
     width:100%;
     height:400px;
-    padding-top:8%;
 }
 .tabes{
     max-width:100%;
@@ -68,6 +72,18 @@ body{
     padding:0;
     background: #F9B042;
     overflow: hidden;
+}
+
+.day{
+    font-size: 2em;
+}
+
+.nav-box-sub{
+    padding:0;
+    font-size: 1.5em;
+    background: #4A7900;
+    overflow: hidden;
+    color: #FFFFFF;
 }
 
 .nav-box-odd a {
