--- a/css/app.css
+++ b/css/app.css
@@ -111,6 +111,7 @@ a{
     font-size: 4em;
     font-family: 'Montserrat', sans-serif;
     transition: 1s;
+    line-height:2;
 }
 
 .nav-box-odd a:hover,
@@ -129,6 +130,7 @@ a{
     width:100%;
     height:100%;
     display:block;
+    line-height:2;
     overflow:auto;
     text-shadow: 0 0 0 #2c2924;
     text-decoration: unset;
@@ -144,6 +146,7 @@ a{
     width:100%;
     height:100%;
     display:block;
+    line-height:2;
     overflow:auto;
     text-shadow: 0 0 0 #2c2924;
     text-decoration: unset;
